[XForms] Using repeat index for 1.1 delete does not work. Bug 387738, p=msterlin r=doronr+aaronr